--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SALT_ROUNDS=10
 JWT_SECRET_KEY='youareawesome'
-DB_NAME='project_db'
-DB_PASSWORD='N3NL8bAxAghi'
+DB_NAME='project-bake'
+DB_PASSWORD='psqlpw'
