--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
