remove jwtauth, comment out FK

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SALT_ROUNDS=10
 JWT_SECRET_KEY='youareawesome'
-DB_NAME='project-bake'
-DB_PASSWORD='psqlpw'
+DB_NAME='socialbakes'
+DB_user='student'
+DB_PASSWORD='student'
