--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SALT_ROUNDS=10
 JWT_SECRET_KEY='youareawesome'
-DB_NAME='socialbakes'
-DB_USER='student'
-DB_PASSWORD='student'
+DB_NAME='project_db'
+DB_PASSWORD='N3NL8bAxAghi'
+DB_USER='postgres'
