--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SALT_ROUNDS=10
 JWT_SECRET_KEY='youareawesome'
 DB_NAME='project-bake'
-DB_PASSWORD='psqlpw'
+DB_PASSWORD='86sPnLmJ7xwuhR'
 DB_USER='postgres'
