--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app was jointly developed by michieet, janiceyap, m-chocolate, normanhfz and quackz90 in a 5 days sprint as part of our module project for NTU / Skills Union software Developer Immersive Program.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
