--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.17.0",
-    "sqlite3": "^5.0.2"
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "jest": "^27.5.1"
