--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,6 +59,7 @@ jobs:
     - name: Branch Merge
       uses: everlytic/branch-merge@1.1.2
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         source_ref: ${{ github.ref }}
         target_branch: main
         commit_message_template: '[Automated] Merged {source_ref} into {target_branch}'
