--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,7 @@ on:
     - jianNan
     - mcho
     - michelle
+    - norman
     
   pull_request:
     branches: 
@@ -19,6 +20,7 @@ on:
     - jianNan
     - mcho
     - michelle
+    - norman
 
 jobs:
   build:
